little alignment fix

--- a/src/components/Tag/TagCat.css
+++ b/src/components/Tag/TagCat.css
@@ -1,6 +1,7 @@
 li.cat {
 	list-style: none;
 	display: flex;
+	align-items: center;
 	padding: 0 5px;
 	border-radius: 2px;
 	background-color: var(--sky);
